# DatasetApp

./: README.md  db.sqlite3
DatasetApp/: pyproject.toml
DatasetApp/main/: admin.py  forms.py  models.py  urls.py  views.py
DatasetApp/main/migrations/: 0001_initial.py  0002_rename_aqivalue_airpollution_aqivalue.py  0003_rename_aqicategory_airpollution_aqicategory_and_more.py  0004_alter_airpollution_lat_alter_airpollution_lng.py  0005_alter_airpollution_aqicategory_and_more.py  0006_alter_airpollution_lat_alter_airpollution_lng.py  0007_xchoice.py  0008_alter_xchoice_choice.py  0009_delete_xchoice.py
DatasetApp/main/static/main/: style.css
DatasetApp/main/templates/main/: home.html  navbar.html  output.html
DatasetApp/project/: Makefile  settings.py  urls.py
