[tool.poetry]
name = "datasetapp"
version = "0.1.0"
description = ""
authors = ["harris <haha5751@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
numpy = "^1.24.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
